objects/ssot__AdKeyword__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdKeywordBidStrategyType__c</fullName>
        <label>Ad Keyword Bid Strategy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdKeywordLabelList__c</fullName>
        <label>Ad Keyword Labels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdKeywordMatchType__c</fullName>
        <label>Ad Keyword Match Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdKeywordStatus__c</fullName>
        <label>Ad Keyword Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Ad Keyword Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAdKeywordCategoryName__c</fullName>
        <label>Primary Ad Keyword Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QualityScoreNumber__c</fullName>
        <label>Quality Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SearchURL__c</fullName>
        <label>Search URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>